--- a/app/src/main/res/layout/activity_login_view.xml
+++ b/app/src/main/res/layout/activity_login_view.xml
@@ -68,6 +68,17 @@
             android:onClick="login"
             android:text="Iniciar Sesion"
             android:textColor="@color/cardview_light_background" />
+
+        <Button
+            android:id="@+id/btnCreateUser"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/roundborders"
+            android:gravity="center"
+            android:onClick="createUser"
+            android:text="Iniciar Sesion"
+            android:textColor="@color/cardview_light_background" />
     </LinearLayout>
 
 
