--- a/app/src/main/res/layout/activity_login_view.xml
+++ b/app/src/main/res/layout/activity_login_view.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/LayoutLogin"
+    android:background="@color/cardview_shadow_start_color"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".views.LoginVIew">
