--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".views.MainFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
+        android:id="@+id/textView"
+        android:layout_width="234dp"
+        android:layout_height="128dp"
+        android:text="Fragmento Principal"
+        android:textSize="24sp" />
 </FrameLayout>
