--- a/app/src/main/res/layout/list_info.xml
+++ b/app/src/main/res/layout/list_info.xml
@@ -22,6 +22,7 @@
 
         <TextView
             android:id="@+id/textViewUser"
+            android:text="xxx"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_weight="100"
