--- a/app/src/main/res/layout/activity_main_view.xml
+++ b/app/src/main/res/layout/activity_main_view.xml
@@ -6,15 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".views.MainView">
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragmentContainerView2"
-        android:name="com.example.examentecnico.views.MainFragment"
-        android:layout_width="412dp"
-        android:layout_height="567dp"
+
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.002" />
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
