--- a/app/src/main/res/layout/activity_list_info_view.xml
+++ b/app/src/main/res/layout/activity_list_info_view.xml
@@ -6,4 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".views.ListInfoView">
 
+    <LinearLayout
+        android:id="@+id/layoutListViewDates"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:context=".views.ListDatesView">
+
+        <ListView
+            android:id="@+id/listViewDates"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
