--- a/app/src/main/res/layout/activity_login_view.xml
+++ b/app/src/main/res/layout/activity_login_view.xml
@@ -5,7 +5,7 @@
     android:id="@+id/LayoutLogin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.LoginVIew">
+    tools:context=".views.LoginView">
 
     <ProgressBar
         android:id="@+id/progressBarLogin"
