--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/principal" android:title="Principal"></item>
+    <item android:id="@+id/lista" android:title="Lista"></item>
     <item android:id="@+id/singout" android:title="Cerrar sesion"></item>
 </menu>
