--- a/app/src/main/res/layout/activity_login_view.xml
+++ b/app/src/main/res/layout/activity_login_view.xml
@@ -19,7 +19,8 @@
         app:layout_constraintHorizontal_bias="0.543"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.292" />
+        app:layout_constraintVertical_bias="0.292"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,17 +32,24 @@
         app:layout_constraintTop_toTopOf="parent"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:paddingTop="100dp"
+        android:paddingTop="10dp"
         >
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="151dp"
+            app:srcCompat="@drawable/icono" />
 
         <EditText
             android:id="@+id/edtxtUser"
+
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="50dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/roundborders"
-            android:backgroundTint="#FFFFFF"
+            android:backgroundTint="#e3e4e5"
             android:hint="Usuario"
             android:inputType="textEmailAddress"
             android:paddingLeft="10dp" />
@@ -51,7 +59,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/roundborders"
-            android:backgroundTint="#FFFFFF"
+            android:backgroundTint="#e3e4e5"
             android:hint="Contraseña"
             android:inputType="textPassword"
             android:paddingLeft="10dp"
