--- a/app/src/main/res/layout/list_info.xml
+++ b/app/src/main/res/layout/list_info.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:id="@+id/imageViewItemsList"
         android:layout_width="0dp"
-        android:layout_height="80dp"
+        android:layout_height="119dp"
         android:layout_weight="20"
         android:padding="10dp" />
 
@@ -20,37 +20,52 @@
         android:layout_weight="80"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textViewUser"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="match_parent"
             android:layout_weight="100"
-            android:gravity="center|left"
-            android:textStyle="bold" />
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/textViewCountry"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_weight="100"
-            android:gravity="center|left"
-            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/textViewUser"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="100"
+                android:gravity="center|left"
+                android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/textViewState"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_weight="100"
-            android:gravity="center|left"
-            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/textViewCountry"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="100"
+                android:gravity="center|left"
+                android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/textViewGender"
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="match_parent"
             android:layout_weight="100"
-            android:gravity="center|left"
-            android:textStyle="bold" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewState"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="100"
+                android:gravity="center|left"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textViewGender"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="100"
+                android:gravity="center|left"
+                android:textStyle="bold" />
+        </LinearLayout>
     </LinearLayout>
 
 
