--- a/app/src/main/res/layout/dialog_orderform.xml
+++ b/app/src/main/res/layout/dialog_orderform.xml
@@ -9,7 +9,24 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/design_default_color_primary"
-        />
+        >
+
+        <TextView
+            android:id="@+id/textVie4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="15dp"
+            android:textSize="20dp"
+            android:text="ORDENAR"
+            android:paddingLeft="5dp"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
         android:id="@+id/textView2"
