--- a/app/src/main/res/layout/dialog_searchform.xml
+++ b/app/src/main/res/layout/dialog_searchform.xml
@@ -9,7 +9,24 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/design_default_color_primary"
-        />
+        >
+
+        <TextView
+            android:id="@+id/textVie4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="15dp"
+            android:textSize="20dp"
+            android:text="BUSCAR"
+            android:paddingLeft="5dp"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <EditText
         android:id="@+id/username"
@@ -37,6 +54,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+
         android:fontFamily="sans-serif" />
 
 </LinearLayout>
