--- a/app/src/main/res/layout/list_info.xml
+++ b/app/src/main/res/layout/list_info.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/cardview_shadow_start_color"
+    android:backgroundTint="#e3e4e5"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal">
@@ -20,6 +20,14 @@
         android:layout_weight="80"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/textViewUser"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="100"
+            android:gravity="center|left"
+            android:textStyle="bold" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -27,15 +35,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textViewUser"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="100"
-                android:gravity="center|left"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/textViewCountry"
+                android:id="@+id/textViewGender"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="100"
@@ -51,7 +51,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textViewState"
+                android:id="@+id/textViewCountry"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="100"
@@ -59,12 +59,13 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/textViewGender"
+                android:id="@+id/textViewState"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="100"
                 android:gravity="center|left"
                 android:textStyle="bold" />
+
         </LinearLayout>
     </LinearLayout>
 
